# GraphCutSeg

./: CMakeLists.txt  README.md
include/cpu/: histogram.hh  implem.hh
include/gpu/: gpuimplem.hh  histogram.hh
segmentation_dataset/: euclidean_dist.py  score.py
segmentation_dataset/outputs/: generate_outputs.sh
src/: CMakeLists.txt  bench.cpp  main.cc
src/cpu/: CMakeLists.txt  histogram.cc  implem.cc
src/gpu/: CMakeLists.txt  gpuimplem.cc  gpuimplem.cu  gpuimplemtiled.cu  histogram.cc
